updating readme and adding bootsrap, js and containers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,52 @@ header {
   text-align: center;
 }
 
+/* Hero  */
+
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'arial'
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1592609931095-54a2168ae893?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjU1NTR8MHwxfHNlYXJjaHwxfHxqYXZhc2NyaXB0fGVufDB8MHx8fDE2MzU0NTcyNDA&ixlib=rb-1.2.1&q=80&w=1080');
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
+.hero-text {
+  text-align: center;
+  color: white;
+}
+
+.hero-text h1 {
+font-size: 5rem;
+margin: 0;
+}
+
+button {
+  color: black;
+text-align: center;
+cursor: pointer;
+border: none;
+  padding: 10px;
+border-radius: 3px;
+}
+
+button:hover {
+opacity: .5;
+}
+
+
+
 /* Sticky navbar - goes between relative and fixed, depending on the scroll position. */
 
 .navbar {
@@ -123,3 +169,4 @@ h2, h3, h4, p, a {
     width: 100%;
   }
 }
+
