--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,12 @@ h1 {
 }
 .subtext {
   padding-bottom: 20%;
-}
+
+  }
+
+.intro-pic {
+justify-content: center;
+  }
 /* Hero  */
 
 html, body {
@@ -139,10 +144,18 @@ img {
 
 
 /* Font details */
-h2, h3, h4, p, a {
+h3, p, a {
   display: block;
   font-family: 'Bellota';
   font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
+h2, h4, h5 {
+  display: block;
+  font-family: 'Bellota';
+  font-size: 50px;
   color: white;
   text-align: center;
 }
