added resume and updated contact me in html and css and  updated code notes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,12 +11,12 @@ header {
   text-align: center;
 }
 
-.row {
+/* .row {
   justify-content: flex-start;
-}
-h1 {
+} */
+/* h1 {
   padding-top: 20%;
-}
+} */
 .subtext {
   padding-bottom: 20%;
 
